test/FAIL/loadcmd/not_hexa/02_test_load.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="wrong arguments (not hexa)"
#-------

load boucle.o 24
